--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,4 +12,8 @@
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
+
+  <h2>Bienvenido {{userDetails.name}}</h2>
+  <h3>{{userDetails.email}}</h3>
+
 </ion-content>
