--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,30 +5,25 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
     <ion-title>login</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-  <img src="/assets/imgs/logo.jpg" class="img-logo" alt="">
+  <img src="/assets/imgs/logo.png" class="img-logo" alt="">
   <h1>ImagesGram</h1>
-
   <div class="content-log">
     <ion-list>
       <ion-item>
         <ion-label floating>Username</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input type="text" [(ngModel)]="userData.email"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label floating>Password</ion-label>
-        <ion-input type="password"></ion-input>
+        <ion-input type="password" [(ngModel)]="userData.password"></ion-input>
       </ion-item>
     </ion-list>
     <button ion-button block (click)="login()">Iniciar Sesión</button>
   </div>
-
 </ion-content>
