--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -5,15 +5,16 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>welcome</ion-title>
-  </ion-navbar>
-
+  <ion-navbar color="primary" hideBackButton>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>Nombre de la página</ion-title>
+  </ion-navbar>    
 </ion-header>
 
 <ion-content padding>
-  <img src="/assets/imgs/logo.jpg" class="img-logo" alt="">
+  <img src="/assets/imgs/logo.png" class="img-logo" alt="">
   <div class="content-log">
     <h1 class="center-text">ImagesGram</h1>
     <ion-list>
